# mmlm2026

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  MASTER_CHECKLIST.md  README.md  README_EXPERIMENT_SYSTEM.md  main.py  pyproject.toml
.claude/: settings.local.json
data/: README.md  TeamSpellings.csv  tourney_round_lookup.csv
docs/: COMPETITION_OPERATIONS.md  NOTEBOOK_POLICY.md  README.md  adj_quality_gap_v10.md  cooper_ratings.docx  march-machine-learning-mania-2026 - Overview and Data and Rules.docx  roadmap.md
notebooks/: frozen_historical_performance_tables.ipynb  submission_performance_tables.ipynb
scripts/: __init__.py  bracket_dp.py  build_frozen_submission.py  check_changed_file_policies.py  check_memory_update.py  dev.ps1  export_benchmark_gap_analysis.py  export_espn_audit.py  export_frozen_historical_performance.py  export_market_audit.py  export_revised_detailed_audit.py  new_decision.py  new_experiment.py  run_arch04b_adj_qg_challenger.py  run_calibration_audit.py  run_elo_seed_baseline.py  run_iterative_adj_qg_challenger.py  run_logit_ridge_meta.py  run_men_reference_margin.py  run_men_round_group_calibration.py  run_men_routed_round_group_model.py  run_phase_ab_logistic.py  run_phase_abc_gbt.py  run_phase_abc_xgboost.py  run_seed_diff_baseline.py  run_simple_blend.py  run_sos_adjusted_net_eff_challenger.py  run_tuned_elo_seed_baseline.py  run_women_alpha_reopen.py  run_women_bucket_group_calibration.py  run_women_close_wr3_challenger.py  run_women_hca_adj_qg_challenger.py  run_women_reference_replication.py  tune_men_elo.py  (+4 more)
(+82 files in other folders)
